--- a/SMA/app1/templates/login.html
+++ b/SMA/app1/templates/login.html
@@ -21,7 +21,7 @@
 
  <section class="header-section">
    <div class="center-div">
-     <h1 class="font-weight-bold">Welcome to Stock Market Analyzer</h1>
+     <h1 class="font-weight-bold">Welcome to Stock Market Analyzer Website</h1>
      <p>Where Predictions Begin.</p>
      
      <div class="header-buttons">
